# introduction-to-embedded-rust-examples

./: .gitignore  LICENSE  README.md
01-blinky-pac/: Cargo.toml  README.md
01-blinky-pac/src/: main.rs
02-blinky-hal/: Cargo.toml  README.md
02-blinky-hal/src/: main.rs  nrf52840_mdk.rs
03-blinky-platform-independent/: README.md
03-blinky-platform-independent/blinky/: Cargo.toml  README.md
03-blinky-platform-independent/blinky-esp32/: Cargo.toml  README.md  build-in-docker.sh  build.rs  openocd.gdb
03-blinky-platform-independent/blinky-esp32/.cargo/: config.toml
03-blinky-platform-independent/blinky-esp32/src/: main.rs
03-blinky-platform-independent/blinky-esp32c3/: Cargo.toml  README.md
03-blinky-platform-independent/blinky-esp32c3/.cargo/: config.toml
03-blinky-platform-independent/blinky-esp32c3/src/: main.rs
03-blinky-platform-independent/blinky-nrf52840-mdk/: Cargo.toml  README.md
03-blinky-platform-independent/blinky-nrf52840-mdk/.cargo/: config.toml
03-blinky-platform-independent/blinky-nrf52840-mdk/src/: main.rs  nrf52840_mdk.rs
03-blinky-platform-independent/blinky/src/: led.rs  lib.rs
