[package]
name = "blinky-esp32c3"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
blinky = { path = "../blinky" }
embedded-hal = "0.2.7"
esp-idf-hal = "0.38"
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }

[build-dependencies]
embuild = "0.30.4"
